RESOLVED FIXED67390
TiledDrawingArea: Fix issues where the tiles of the previous scale would be removed too early.
https://bugs.webkit.org/show_bug.cgi?id=67390
Summary TiledDrawingArea: Fix issues where the tiles of the previous scale would be r...
Jocelyn Turcotte
Reported 2011-09-01 05:33:33 PDT
TiledDrawingArea: Fix issues where the tiles of the previous scale would be removed too early.
Attachments
Patch (3.93 KB, patch)
2011-09-01 05:37 PDT, Jocelyn Turcotte
vestbo: review+
Jocelyn Turcotte
Comment 1 2011-09-01 05:37:06 PDT
Tor Arne Vestbø
Comment 2 2011-09-06 08:07:49 PDT
Comment on attachment 105945 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=105945&action=review lgtm > Source/WebKit2/ChangeLog:12 > + be replaced by the current incomplete tile set which may contain no tile at all. tiles
Jocelyn Turcotte
Comment 3 2011-09-07 10:12:59 PDT
Note You need to log in before you can comment on or make changes to this bug.