TiledDrawingArea: Fix issues where the tiles of the previous scale would be removed too early. https://bugs.webkit.org/show_bug.cgi?id=67390

Reviewed by Tor Arne Vestbø.

The two issues addresssed are:
- The previous instance of the tile backing store would be destroyed in createTile which
  would send removeTile messages for all its tiles before the DidRenderFrame message is sent for the new tiles.
- When quickly changing the scale a second time after a scale change, the previous tile set would
  be replaced by the current incomplete tile set which may contain no tiles at all.
* WebProcess/WebPage/TiledDrawingArea.cpp:
(WebKit::TiledDrawingArea::setVisibleContentRectAndScale):
(WebKit::TiledDrawingArea::tiledBackingStorePaintEnd):
(WebKit::TiledDrawingArea::createTile):

Canonical link: https://commits.webkit.org/83577@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94678 268f45cc-cd09-0410-ab3c-d52691b4dbfc